Searching API is working